# edge-service-mqtt-rfid

./: .gitignore
.github/workflows/: build-installer.yml
backend/: README.md  config.py  database.py  main.py  models.py  mqtt_client.py  pyproject.toml
backend/certs/: cert.pem  key.pem  openssl.cnf
backend/conf/: edge-config.json
backend/routers/: __init__.py  alarms.py  calibration.py  config_router.py  tags.py
backend/services/: __init__.py  decision.py  epc_decoder.py  ttl_cleanup.py  websocket_manager.py
backend/tests/: __init__.py  test_api.py  test_decision.py  test_ttl_cleanup.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Alert.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  Slider.tsx  Spinner.tsx  StatusBadge.tsx  Table.tsx  index.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: AlarmLogs.tsx  Calibration.tsx  Dashboard.tsx  Settings.tsx
installer/: .gitignore  README.md  TROUBLESHOOTING.md  build-installer.bat  build-installer.ps1  circa-rfid-edge-setup.iss  edge-service.spec  edge-service.xml  setup_system.ps1
installer/assets/: rootCA.pem
